<resources>
    <string name="app_name">MediCare</string>
    <string name="welcome_to_medicare">Welcome To MediCare</string>
    <string name="navigation_drawer_open">Open Navigation Drawer</string>
    <string name="navigation_drawer_close">Close Navigation Drawer</string>
    <string-array name="depertments">
        <item>Select Depertment</item>

        <item>Dentistry</item>
        <item>Surgery</item>
        <item>Psychology</item>
        <item>Pediatric</item>
        <item>Cardiology</item>
        <item>Gynecology</item>


    </string-array>
    <string-array name="health_tips_name">

        <item>A Good Way To Gain Weight If You Are Underweight</item>
        <item>Physical Activity</item>
        <item>Physical Activity Guide</item>
        <item>A Smart Approach To Weight Loss</item>
        <item>Healthy Eating Plan</item>
        <item>How To Use In haler</item>
        <item>Keep Your Heart Healthy</item>
        <item>Keep Your Kidney Healthy</item>
        <item>Keep Your Liver Healthy</item>
        <item>Signs Of Breast Cancer</item>
        <item>Vitamin A</item>
        <item>Vitamin B</item>
        <item>Vitamin B12</item>
        <item>Vitamin C</item>
        <item>Vitamin D</item>
        <item>Vitamin E</item>
        <item>Vitamin K</item>

    </string-array>
    <string-array name="disease_name">
        <item>Back Pain</item>
        <item>Piles</item>
        <item>Tetanus</item>
        <item>Thalassemia</item>
        <item>Swine Flu</item>
        <item>Tonsillitis</item>
        <item>Tuberculosis</item>
        <item>Urinary Tract Infection</item>
        <item>Virtigo</item>

    </string-array>
    <string-array name="parental_care">
        <item>Prenatal Care</item>
        <item>Postnatal Care</item>
        <item>Menstrual Problems</item>
        <item>Miscarriage</item>
        <item>High Risk Pregnancy</item>

    </string-array>
    <string-array name="gender">
        <item>Select Gender</item>

        <item>Male</item>
        <item>Female</item>
        <item>Others</item>


    </string-array>
    <string name="option1">Health Tips</string>
    <string name="option2">Disease and Symptoms</string>
    <string name="option3">Mother and child corner</string>
    <string name="option4">BMI Calculator</string>
    <string name="option5">Doctor list</string>
    <string name="option6">Ambulance</string>
    <string name="option7">Log Out</string>
    <string name="Backpain_text">Back pain is a common symptom that affects 60–80% of people at some time in their lives.The prognosis (outcome) is generally good. After 2 days, 30% are better and 90% have recovered by 6 weeks. Recurrences  of  pain  may  occur  and  about  10–15%  of patients  go  on  to  develop  chronic  back  pain  that  may  be difficult  to  treat.  Psychological  elements,  such  as  job  dissatisfaction,  depression  and  anxiety,  are  important  risk factor.
        Causes of Back pain
        Mechanical back pain
        Prolapsed intervertebral  disc
        Osteoarthritis
        Vertebral fracture
        Spinal stenosis
        Paget’s disease
        Spondylolysis
        Bone metastases etc.
        Others causes
        Renal colic, Pyelonephritis
        Pelvic inflammatory disease
        Pancreatitis
        Peptic ulcer disease
        What causes back pain in children?
        These injuries are usually caused by activity and overuse. Scheuermann’s disease causes pain that is not severe enough to limit activity. It is the second most common cause of back pain in children and young adults. Your child may have a rounded spine.
        Can Stomach pain be caused by back pain?
        A back injury or injury to the spine can cause pain to radiate in the abdomen. Also, a pinched nerve can not only cause pain to the entire area served by that nerve, but it can also cause various stomach functioning problems as well. Inflammation of the colon, or colitis, is very often associated with lower back pain.
        Why do girls have back pain?
        Lower back pain during your period, or primary dysmenorrhea, is caused by contractions in the uterus.
        What causes muscle spasms in the lower back?
        Back spasms can be the result of injuries to the muscles, tendons, and ligaments in the back or it can be related to more serious medical conditions. Heavy lifting is a common cause of back spasms. Any activity that puts excessive strain on the muscles and ligaments in the lower back can cause an injury.
        Symptoms of mechanical low back pain
        Pain  varies  with  physical  activity  (improved  with  rest)
        Sudden  onset,  precipitated  by  lifting  or  bending
        Recurrent  episodes
        Pain  limited  to  back  or  upper  leg
        No  clear-cut  nerve  root  distribution
        No  systemic  features
        Prognosis  good  (90%  recovery  at  6  wks)
        Red flags for possible spinal pathology (Danger features)
        Age:  presentation  20  yrs  or   55  yrs
        Character:  constant,  progressive  pain  unrelieved  by rest
        Location:  thoracic  pain
        Past  medical  history:  carcinoma,  tuberculosis,  HIV,  systemic corticosteroid  use,  osteoporosis
        Constitutional:  systemic  upset,  sweats,  weight  loss
        Major  trauma
        Investigations
        Investigations are not required in patients with acute mechanical back pain.  Those  with  persistent  pain  (> 6  weeks)  or  red  flags  should  undergo further  investigations such as MRI, X-Ray, Bone scan and some blood tests.
        What are the treatment of LBP?
        General
        Self-limiting nature of the condition.
        Stay active, exercise is helpful rather than damaging
        Medication if necessary (preferably at fixed time intervals).
        Paracetamol
        NSAID like ibuprofen, indomethacin, naproxen.
        Regular use, improved mobility, and facilitate exercise
        Doctor may consider opioids, muscle relaxant medicine
        Bed rest is not helpful it increase the risk of chronic disability .
        For pain relief doctor may consider spinal manipulation Lumbar supports, back-specific exercises, traction, acupuncture, epidural or facet injections not helpful for mechanical back pain .
        Physiotherapy may be required if not improved within 6 weeks Low dose Tricyclic anti-depressant drugs will help pain, sleep and mood
        Specific Treatment of other causes should be done accordingly with involving other special departments as per doctor advice.
        What should we do for back spasms?
        Warm water compression helps to promote healing by drawing healthy blood cells to the area of the back spasm. Heat also relaxes the nerves and muscle fibers. Try an ice and heat alternate cycle after the first 72 hours. Some physical therapists suggest using heat applications before stretching and ice after stretching.
        What is the cause of muscle spasms?
        Spasms may affect many different types of muscles in the body, leading to many different symptoms. Spasms of skeletal muscles are most common and are often due to overuse, dehydration, and electrolyte abnormalities. The spasm occurs abruptly, is painful, and is usually short-lived.
        How do you get rid of a muscle spasm?
        Natural Treatments for Muscle Spasms.
        Prevent Electrolyte Imbalances. A potassium and/or magnesium deficiency can contribute to muscle spasms.
        Stretch and Massage Your Muscles.
        Stay Hydrated.
        Use Ice or Heat Packs on Sensitive Muscles
        Fix Your Posture.
        Take a Bath with Epsom Salt.
        How long does it take to heal from a back spasm?
        After the first three days, you can start using heat to loosen muscle tightness and increase blood flow. Waiting at least 72 hours after your spasms start allows the initial swelling and inflammation to go down, and moist heat is generally preferred to dry because it reduces the potential for dehydration.
    </string>
</resources>