<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="4"
    android:padding="5dp"
    android:orientation="vertical"
    tools:context=".HomePageActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="200dp">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/patientlogo"
            android:src="@drawable/looking_for_doctor"
            android:layout_gravity="center">

        </ImageView>


    </RelativeLayout>


    <LinearLayout
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:clipToPadding="false"
        android:gravity="center">

        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="10dp"
            android:id="@+id/healthcardviewid"
            android:clickable="true"
            android:foreground="?android:attr/selectableItemBackground">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="117dp"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="74dp"
                    android:layout_height="65dp"
                    android:padding="10dp"
                    android:src="@drawable/tip">


                </ImageView>

                <TextView
                    android:layout_width="98dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:gravity="center"
                    android:text="@string/option1"
                    android:textAppearance="?android:textAppearanceSmall"
                    android:textColor="@color/black"
                    android:textStyle="bold">

                </TextView>


            </LinearLayout>


        </androidx.cardview.widget.CardView>



        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="10dp"
            android:id="@+id/diseasecardviewid"
            android:clickable="true"
            android:foreground="?android:attr/selectableItemBackground">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="131dp"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="74dp"
                    android:layout_height="65dp"
                    android:padding="10dp"
                    android:src="@drawable/viras">


                </ImageView>

                <TextView
                    android:layout_width="103dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/option2"
                    android:gravity="center"
                    android:textAppearance="?android:textAppearanceSmall"
                    android:textColor="@color/black"
                    android:textStyle="bold">

                </TextView>


            </LinearLayout>


        </androidx.cardview.widget.CardView>


        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="10dp"
            android:id="@+id/mothercardviewid"
            android:clickable="true"
            android:foreground="?android:attr/selectableItemBackground">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="129dp"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="74dp"
                    android:layout_height="65dp"
                    android:padding="10dp"
                    android:src="@drawable/parenting">


                </ImageView>

                <TextView
                    android:layout_width="103dp"
                    android:layout_height="55dp"
                    android:layout_marginTop="5dp"
                    android:text="@string/option3"
                    android:gravity="center"
                    android:textAppearance="?android:textAppearanceSmall"
                    android:textColor="@color/black"
                    android:textStyle="bold">

                </TextView>


            </LinearLayout>


        </androidx.cardview.widget.CardView>


    </LinearLayout>



    <LinearLayout
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:clipToPadding="false"
        android:gravity="center">

        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="10dp"
            android:id="@+id/bmicardviewid"
            android:clickable="true"
            android:foreground="?android:attr/selectableItemBackground">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="131dp"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="74dp"
                    android:layout_height="65dp"
                    android:padding="10dp"
                    android:src="@drawable/ic_book">


                </ImageView>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:layout_marginTop="5dp"
                    android:gravity="center"
                    android:text="@string/option4"
                    android:textAppearance="?android:textAppearanceSmall"
                    android:textColor="@color/black"
                    android:textStyle="bold">

                </TextView>


            </LinearLayout>


        </androidx.cardview.widget.CardView>



        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="10dp"
            android:id="@+id/doctorlistcardviewid"
            android:clickable="true"
            android:foreground="?android:attr/selectableItemBackground">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="131dp"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="74dp"
                    android:layout_height="65dp"
                    android:padding="10dp"
                    android:src="@drawable/doctor1">


                </ImageView>

                <TextView
                    android:layout_width="103dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/option5"
                    android:gravity="center"
                    android:textAppearance="?android:textAppearanceSmall"
                    android:textColor="@color/black"
                    android:textStyle="bold">

                </TextView>


            </LinearLayout>


        </androidx.cardview.widget.CardView>


        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="10dp"
            android:id="@+id/ambulancecardviewid"
            android:clickable="true"
            android:foreground="?android:attr/selectableItemBackground">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="129dp"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="74dp"
                    android:layout_height="65dp"
                    android:padding="10dp"
                    android:src="@drawable/ambulance1">


                </ImageView>

                <TextView
                    android:layout_width="103dp"
                    android:layout_height="55dp"
                    android:layout_marginTop="5dp"
                    android:text="@string/option6"
                    android:gravity="center"
                    android:textAppearance="?android:textAppearanceSmall"
                    android:textColor="@color/black"
                    android:textStyle="bold">

                </TextView>


            </LinearLayout>


        </androidx.cardview.widget.CardView>


    </LinearLayout>



    <LinearLayout
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:clipToPadding="false"
        android:gravity="center">

        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="10dp"
            android:id="@+id/myprofilecardviewid"
            android:clickable="true"
            android:foreground="?android:attr/selectableItemBackground">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="131dp"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="74dp"
                    android:layout_height="65dp"
                    android:padding="10dp"
                    android:src="@drawable/ic_profile">


                </ImageView>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:layout_marginTop="5dp"
                    android:gravity="center"
                    android:text="My Profile"
                    android:textAppearance="?android:textAppearanceSmall"
                    android:textColor="@color/black"
                    android:textStyle="bold">

                </TextView>


            </LinearLayout>


        </androidx.cardview.widget.CardView>



        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="10dp"
            android:id="@+id/logoutcardviewid"
            android:clickable="true"
            android:foreground="?android:attr/selectableItemBackground">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="131dp"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="74dp"
                    android:layout_height="65dp"
                    android:padding="10dp"
                    android:src="@drawable/ic_logout">


                </ImageView>

                <TextView
                    android:layout_width="103dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:gravity="center"
                    android:text="@string/option7"
                    android:textAppearance="?android:textAppearanceSmall"
                    android:textColor="@color/black"
                    android:textStyle="bold">

                </TextView>


            </LinearLayout>


        </androidx.cardview.widget.CardView>


        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="10dp"
            android:clickable="true"
            android:foreground="?android:attr/selectableItemBackground">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="129dp"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="74dp"
                    android:layout_height="65dp"
                    android:padding="10dp">


                </ImageView>

                <TextView
                    android:layout_width="103dp"
                    android:layout_height="55dp"
                    android:layout_marginTop="5dp"
                    android:gravity="center"
                    android:textAppearance="?android:textAppearanceSmall"
                    android:textColor="@color/black"
                    android:textStyle="bold">

                </TextView>


            </LinearLayout>


        </androidx.cardview.widget.CardView>


    </LinearLayout>







</LinearLayout>